test: integration tests
- some refactoring
- clean code