@@ -22,14 +22,18 @@ repositories {
 }
 
 dependencies {
+    implementation(project(":battleship-lang"))
     implementation(libs.slf4j.api)
     implementation(libs.jackson.kotlin)
     implementation(libs.spring.context)
 
     testImplementation(platform(libs.junit.bom))
+    testImplementation(libs.spring.boot.test)
     testImplementation(libs.kotlin.test)
     testImplementation(libs.mockk)
     testImplementation(libs.assertj)
+    testImplementation(libs.junit.jupiter.params)
+    testImplementation(project(":battleship-scenario-dsl-domain-driver"))
 
     testRuntimeOnly(libs.junit.platform)
 }
@@ -43,4 +47,5 @@ tasks.withType<KotlinCompile> {
 
 tasks.withType<Test> {
     useJUnitPlatform()
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
